overflow solved

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,8 @@ html {
   user-select: none;
   scroll-behavior: smooth;
 }
+
+html,
+body {
+  overflow-x: hidden;
+}
